13178
I get the following results:

scala> def implicitly[T](implicit t : T) = t
implicitly: [T](implicit T)T

scala> implicit def perhaps[T](implicit t : T) : Option[T] = Some(t);
perhaps: [T](implicit T)Option[T]

scala> implicit val hello = "Hello"
hello: java.lang.String = Hello

scala> implicitly[String]
res0: String = Hello

implicitly[Option[String]]
<console>:8: error: no implicit argument matching parameter type Option[String]
was found.
       implicitly[Option[String]]
       ^

But implicitly[Option[String]] should get the implicit parameter perhaps(hello) passed.

This may be related to ticket SI-298. 
